[gd_scene load_steps=3 format=2]

[ext_resource path="res://World/game_over_background.jpg" type="Texture" id=1]
[ext_resource path="res://World/difficulty_screen.gd" type="Script" id=2]

[node name="difficulty_screen" type="Node"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 95.0
margin_top = 50.0
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 138.0
margin_bottom = 86.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 138.0
margin_bottom = 14.0
text = "Choose your difficulty"

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 138.0
margin_bottom = 38.0
focus_neighbour_top = NodePath("../Button3")
focus_neighbour_bottom = NodePath("../Button2")
text = "Normal"

[node name="Button2" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 42.0
margin_right = 138.0
margin_bottom = 62.0
focus_neighbour_top = NodePath("../Button")
focus_neighbour_bottom = NodePath("../Button3")
text = "Hard"

[node name="Button3" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 66.0
margin_right = 138.0
margin_bottom = 86.0
focus_neighbour_top = NodePath("../Button2")
focus_neighbour_bottom = NodePath("../Button")
text = "Nightmare"
[connection signal="pressed" from="MarginContainer/VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Button3" to="." method="_on_Button3_pressed"]
